--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("images/akan.jpg");
+    background-color: antiquewhite;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
