--- a/style.css
+++ b/style.css
@@ -1,16 +1,78 @@
-body {
+main{
+  text-align: center;
+  color: white;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+main h1{
+  font-family: 'Bowlby One SC', cursive;
+  font-size: 300%;
+}
+
+main p{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: x-large;
+}
+
+section{
+  text-align: center;
+  padding-bottom: 10%;
+  color: white;
+}
+
+footer{
+  background-color:brown;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  text-align: center;
+}
+
+body{
+  background-image: url(https://bit.ly/39BPszd);
+  background-size: cover;
+}
+
+.clr{
+  color: darkblue;
+}
+
+.fa {
+  padding: 30px;
+  font-size: 20px;
+  width: 80px;
+  text-align: center;
+  text-decoration: none;
+  margin: 8px 5px;
+  border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.5;
+}
+
+.fa-facebook {
+  background:rgb(66,103,178);
+  color: white;
+}
+
+.fa-twitter {
+  background: rgb(56,161,243);
+  color: white;
+}
+
+.fa-instagram {
+  color: #fff;
+  background: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+  box-shadow: 0px 3px 10px rgba(0,0,0,.25);
+}body {
     background-color: antiquewhite;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     height: 50%;
     margin: 0%;
-  }
-  body 
-  image {
-position: center;
-height: 100%;
-margin: 100%;
   }
   h2 {
     text-align: center;
@@ -23,3 +85,9 @@ margin: 100%;
 div {
   text-align: center;
   }
+  img {
+    display: inline-block;
+    height: 100%;
+    width: 0;
+  }
+  
