--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ footer{
 }
 
 body{
-  background-image: url(https://bit.ly/39BPszd);
+  background-image: url(http://sydney.edu.au/environment-institute/wp-content/uploads/2020/07/elephant.jpg);
   background-size: cover;
 }
 
